# lift-journal-data

./: MANIFEST.in  README.md  manage.py  models.py  pyproject.toml  requirements.txt
docs/design/: erd.mdj
documentation/design/: erd.mdj
lift_journal_data/: app.py  crud.py  models.py
lift_journal_data/crud/: __init__.py  lift.py  lift_set.py  set.py  user.py
lift_journal_data/db/: __init__.py  manage.py
lift_journal_data/db/models/: __init__.py  lift.py  lift_set.py  set.py  user.py
lift_journal_data/fixtures/: lifts.json
lift_journal_data/schemas/: lift.py  lift_set.py  requests.py  set.py  user.py
src/: models.py
tests/: db.py  test_crud.py  test_models.py
tests/crud/: test_lift.py  test_lift_set.py  test_set.py  test_user.py
tests/schemas/: test_requests.py  test_user.py
