[project]
name = "lift-journal-data"
version = "0.7.4"
requires-python = ">=3.10"
authors = [
    {name="Brandan Glendenning", email="brandan@glendigi.com"}
]
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "email-validator"
]

[project.scripts]
ljd_manage = "lift_journal_data.db.manage:main"
